    wildcard (-W), endianness (-E) or bits (-B). The restricting options can
    be combined, or omitted altogether. Closes: #762635
  * Say arch-wildcard instead of arch-alias in dpkg-architecture --help output.
  * Test suite:
    - Do not leave temporary files behind on failure or when interrupted.
  * Add --build and --extract command aliases to dpkg-source.

  [ Raphaël Hertzog ]
  * Explain better in deb-triggers(5) why interest/activate-noawait should be
    favored.

  [ Updated programs translations ]
  * Catalan (Guillem Jover): Fix mismatched format string.
  * Czech (Miroslav Kure).
  * Polish (Łukasz Dulny).
  * Turkish (Mert Dirik). Closes: #763825

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).
  * Italian (Guillem Jover): Swap order of some dpkg-deb arguments.
    Thanks to xor <xor@paranoici.org>. Closes: #759149

 -- Guillem Jover <guillem@debian.org>  Tue, 19 Aug 2014 20:33:29 +0200

dpkg (1.17.13) unstable; urgency=low

  [ Guillem Jover ]
  * Remove unbalanced trailing single-quote in dpkg-deb error message.
    Reported by Trần Ngọc Quân <vnwildman@gmail.com>.
  * Remove architecture blacklist from hardening build flag option
    stackprotectorstrong. Thanks to Romain Francoise <rfrancoise@debian.org>.
  * Documentation:
    - Merge binary:Package descriptions in dpkg-query(1).
    - Split --remove and --purge options in dpkg(1). This also clarifies on
      which package states each option can operate. Closes: #576338
    - Remove duplicate “of the” in dpkg-maintscript-helper(1).
  * Fix dpkg-maintscript-helper dir_to_symlink to handle relative symlink
    targets. Thanks to Helmut Grohne <helmut@subdivi.de>.
  * Fix dpkg-maintscript-helper symlink_to_dir to assure absolute pathnames
    arguments.
  * Fix dpkg-source not detecting modified files during --commit or -b.
    Regression introduced in dpkg 1.17.11. Closes: #758426
    Reported by Neil Williams <codehelp@debian.org>.