@@ -104,6 +104,8 @@ dpkg (1.17.14) UNRELEASED; urgency=low
   * Test suite:
     - Do not leave temporary files behind on failure or when interrupted.
   * Add --build and --extract command aliases to dpkg-source.
+  * Print file or package names instead of pointers in dpkg debug output,
+    to make it more meaningful and reproducible.
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
